Code refactored for simplicity (Eliminated code that was used in multiple places unnecessarily) Fixed bug where all Stop Markers' infowindows would be attached to a single marker. Shifted map centering logic from front end to back end. Minor style changes (All pages except homepage and map page will scroll if necessary).

--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ body {
 	height: 100vh;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 /*home page*/
@@ -24,6 +24,7 @@ body {
 	width: 100vw;
 	background-image: url(/assets/background.jpg);
 	background-size: cover;
+  overflow: hidden;
 }
 
 #search{
@@ -259,6 +260,10 @@ body {
 
 }
 
+.map_wrapper {
+  overflow: hidden;
+}
+
 
 /*table page*/
 
@@ -377,9 +382,6 @@ table a {
   margin-left: 28vw;
   margin-right: 28vw;
 }
-
-/*table page*/
-
 
 
 /*contact page*/
